--- a/Html/Day 1/index.html
+++ b/Html/Day 1/index.html
@@ -13,6 +13,27 @@
     <h4>Web Development Course</h4>
     <h5>Web Development Course</h5>
     <h6>Web Development Course</h6>
-    
+    <hr>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nisi enim incidunt eveniet ducimus! Aut consequuntur iure consectetur sed ducimus! Doloribus, ullam repellendus quod vel atque totam placeat explicabo magnam! Esse.   </p>
+    <br>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Expedita suscipit placeat dicta aperiam, laudantium repellat nesciunt quos nobis nihil quibusdam.</p>
+<br>
+    <ol>
+        <li>Milk</li>
+        <li>Sugar</li>
+        <li>Chaipatti</li>
+        <li>Water</li>
+    </ol>
+    <br>
+    <ul>
+        <li>Milk</li>
+        <li>Sugar</li>
+        <li>Chaipatti</li>
+        <li>Water</li>
+    </ul>
+    <!-- anchor tag -->
+    <a href="https://coderarmy.in/#home" target="_blank">coder army</a>
+    <!--image tag-->
+    <img src="https://images.wagwalkingweb.com/media/daily_wag/sense_guides/hero/1531299858.74/Can-Dogs-Sense-a-Hurricane.jpg" alt="dog image" height="300px" width="500px">
 </body>
 </html>
